--- a/images/image-a/backend/.env
+++ b/images/image-a/backend/.env
@@ -6,3 +6,6 @@ REDIS_URL=localhost:6379
 REDIS_PASSWORD=
 REDIS_DB=0
 REDIS_MESSAGING_CHANNEL="messaging"
+REDIS_USER_COUNT_CHANNEL="userCount"
+ANONYMOUS_USERS_REDIS_KEY=anonymousUsers
+AUTHORIZED_USERS_REDIS_KEY="authorizedUsers"
