--- a/images/image-a/Dockerfile
+++ b/images/image-a/Dockerfile
@@ -1,17 +1,18 @@
 FROM golang:1.20.2-alpine
 
-WORKDIR /backend
+# create directory for src 
+WORKDIR /usr/src/backend
 
-COPY backend/* ./
-
+# copy src to container
 COPY ./backend/ ./
-RUN go mod download
 
-RUN go build -o /backend
+# install dependencies & build
+RUN go mod download && go build -o /backend
 
+# set env vars
 ENV PORT 8000
 ENV GO_ENV production
 
+# expose port & start
 EXPOSE $PORT
-
 CMD ["/backend"]
