--- a/images/image-b/Dockerfile
+++ b/images/image-b/Dockerfile
@@ -5,18 +5,18 @@ WORKDIR /usr/src/frontend
 
 # copy src to container
 COPY ./frontend/ ./
-# build react site from src
+# install dependencies & build
 RUN npm install && npm run build
 
 # pull nginx image
 FROM nginx
 
-# Move built site to nginx html dir
+# move built site to nginx html dir
 WORKDIR /usr/share/nginx/html
 COPY --from=build /usr/src/frontend/dist/ ./
 
-# Move nginx config to expected location
+# move nginx config to expected location
 COPY ./nginx/app.conf /etc/nginx/conf.d/default.conf
 
-# Expose port
+# expose port
 EXPOSE 30222
