--- a/images/image-b/nginx/app.conf
+++ b/images/image-b/nginx/app.conf
@@ -1,5 +1,5 @@
 server {
-    listen 30222;
+    listen 80;
 
     # Dont send nginx version #
     server_tokens off;
@@ -20,7 +20,7 @@ server {
         proxy_set_header Connection 'upgrade';
         proxy_cache_bypass $http_upgrade;
 
-        proxy_pass chatapp-backend:8000;
+        proxy_pass http://chatapp-backend:8000;
     }
 
     location / {
