--- a/images/image-b/nginx/app.conf
+++ b/images/image-b/nginx/app.conf
@@ -14,6 +14,14 @@ server {
 
     location /api {
         limit_except GET POST { deny  all; }
+        proxy_no_cache 1;
+        proxy_cache_bypass 1;
+        
+        proxy_pass http://chatapp-backend:8000;
+    }
+
+    location /ws {
+        limit_except GET POST { deny  all; }
 
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
