--- a/chatapp.yaml
+++ b/chatapp.yaml
@@ -16,7 +16,7 @@ spec:
       terminationGracePeriodSeconds: 30
       containers:
       - name: chatapp-backend
-        image: harbor.pacslab.ca/215717002/backend:latest
+        image: harbor.pacslab.ca/215717002/image-a:latest
         env:
         - name: MONGODB_URL
           value: "mongodb://mongo:27017"
@@ -43,6 +43,26 @@ spec:
           limits:
             cpu: 200m
             memory: 128Mi
+        readinessProbe:
+          httpGet:
+            scheme: HTTP
+            path: /api/health
+            port: 8000
+          initialDelaySeconds: 10
+          timeoutSeconds: 10
+          periodSeconds: 10
+          successThreshold: 1
+          failureThreshold: 6
+        livenessProbe:
+          httpGet:
+            scheme: HTTP
+            path: /api/health
+            port: 8000
+          initialDelaySeconds: 10
+          timeoutSeconds: 10
+          periodSeconds: 10
+          successThreshold: 1
+          failureThreshold: 6
       restartPolicy: Always
       imagePullSecrets:
       - name: regcred
@@ -64,7 +84,7 @@ spec:
       terminationGracePeriodSeconds: 5
       containers:
       - name: chatapp-frontend
-        image: harbor.pacslab.ca/215717002/frontend:latest
+        image: harbor.pacslab.ca/215717002/image-b:latest
         ports:
         - containerPort: 80
         resources:
@@ -74,6 +94,26 @@ spec:
           limits:
             cpu: 200m
             memory: 128Mi
+        readinessProbe:
+          httpGet:
+            scheme: HTTP
+            path: /
+            port: 80
+          initialDelaySeconds: 10
+          timeoutSeconds: 10
+          periodSeconds: 10
+          successThreshold: 1
+          failureThreshold: 6
+        livenessProbe:
+          httpGet:
+            scheme: HTTP
+            path: /
+            port: 80
+          initialDelaySeconds: 10
+          timeoutSeconds: 10
+          periodSeconds: 10
+          successThreshold: 1
+          failureThreshold: 6
       restartPolicy: Always
       imagePullSecrets:
       - name: regcred
