--- a/images/image-b/frontend/package.json
+++ b/images/image-b/frontend/package.json
@@ -24,7 +24,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "GENERATE_SOURCEMAP=false BUILD_PATH='./dist' react-scripts build",
-    "test": "jest",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -46,6 +46,8 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.20.2",
+    "babel-jest": "^29.5.0",
     "jest": "^27.5.1"
   }
 }
