--- a/images/image-b/frontend/package.json
+++ b/images/image-b/frontend/package.json
@@ -16,9 +16,9 @@
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
-    "react-use-measure": "^2.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
